--- a/WebPage/gwd_preview_Index/index.html
+++ b/WebPage/gwd_preview_Index/index.html
@@ -305,7 +305,7 @@ body {
             y1 = 400;
             break;
           case 4:
-            delta = (1.1667 - (((y-860) / 300) * 2)) * PI;
+            delta = (1.1667 - (((y - 860) / 300) * 2)) * PI;
             x1 = 500;
             y1 = 133;
             break;
