--- a/WebPage/gwd_preview_Index/index.html
+++ b/WebPage/gwd_preview_Index/index.html
@@ -356,7 +356,7 @@ body {
           win.moveTo(x2, y2);
           win.lineTo(x3, y3);
           win.lineTo(x4, y4);
-          win.lineTo(x, y2);
+          win.lineTo(x2, y2);
           win.fill();
 
         } else {
