--- a/WebPage/gwd_preview_Index/index.html
+++ b/WebPage/gwd_preview_Index/index.html
@@ -265,8 +265,8 @@ body {
       }
 
       function draw_rain(win) {
-
-        win.rect(450, 300, 100, 200);
+        win.rect(449, 299, 52, 182);
+        win.rect(501, 299, 52, 182);
         win.stroke();
       }
 
@@ -386,6 +386,26 @@ body {
           win.fill();
         }
       }
+      
+      function rain_plot( now , total, win)
+      {
+        now /= 150;
+        total /= 150;
+        var n_scale = Math.ceil(now);
+        var t_scale = Math.ceil(total);
+        var n_s = 180 * (now/n_scale);
+        var n_t = 180 * (total/t_scale);        
+          win.fillText(n_scale, 360, 300);        
+          win.fillText(t_scale, 640, 300);        
+        win.fillStyle = h_col;
+        win.rect(450, 480-n_s, 50, n_s);
+        win.fill(); 
+        win.beginPath();     
+        win.fillStyle = "Blue";
+        win.rect(502, 480 -n_t, 50, n_t);
+        win.fill();
+        
+      }
 
       function update_fields() {
         var x = document.getElementById("canvas");
@@ -440,6 +460,7 @@ body {
             data_plot(5, parseFloat("10"), ctx);
             data_plot(6, parseFloat("90"), ctx);
             data_plot(7, parseFloat("15"), ctx);
+            rain_plot(parseFloat(dat[15]),parseFloat(dat[16]), ctx);
           }
         };
         xhr.open("GET", url, false);
