--- a/WebPage/gwd_preview_Index/index.html
+++ b/WebPage/gwd_preview_Index/index.html
@@ -142,39 +142,34 @@ body {
     var sort_update;
     var active_window = 0;
     gwd.about = function(event) {
-      var x = document.getElementById("canvas");
+      var x = document.getElementById("cent_c");
       x.style.display = "none";
-      x = document.getElementById("canvas_H");
+      x = document.getElementById("canvas_area_1");
       x.style.display = "none";
       x = document.getElementById("about");
+      canvas_area_1
       x.style.display = "block";
-      x = document.getElementById("duration");
-      x.style.visibility = "hidden";
       active_window = 2;
     };
     gwd.current = function(event) {
       // current data
-      var x = document.getElementById("canvas");
+      var x = document.getElementById("cent_c");
       x.style.display = "block";
-      x = document.getElementById("canvas_H");
+      x = document.getElementById("canvas_area_1");
       x.style.display = "none";
       x = document.getElementById("about");
       x.style.display = "none";
-      x = document.getElementById("duration");
-      x.style.visibility = "hidden";
       active_window = 0;
       sort_update();
     };
     gwd.history = function(event) {
       // show history
-      var x = document.getElementById("canvas_H");
-      x.style.display = "block";
-      x = document.getElementById("canvas");
+      x = document.getElementById("cent_c");
       x.style.display = "none";
+      x = document.getElementById("canvas_area_1");
+      x.style.display = "block";
       x = document.getElementById("about");
       x.style.display = "none";
-      x = document.getElementById("duration");
-      x.style.visibility = "visible";
       active_window = 1;
       sort_update();
     };
@@ -218,7 +213,6 @@ body {
       var PI = 3.1416;
       var rad = 57.2958;
       var c = document.getElementById("canvas");
-      var ch = document.getElementById("canvas_H");
       var dia = 80;
 
       function draw_dial(loc, win) {
@@ -576,9 +570,9 @@ body {
           if (xhr.readyState == 4) {
             var t_r = xhr.responseText;
             var dat = t_r.split(",");
-            var x = document.getElementById("canvas");
+            var x = document.getElementById("cent_c");
             x.style.display = "block";
-            x = document.getElementById("canvas_H");
+            x = document.getElementById("canvas_area_1");
             x.style.display = "none";
             x = document.getElementById("about");
             x.style.display = "none";
@@ -634,13 +628,59 @@ body {
       }
 
       function update_history() {
-         var chart0 = new Chart(document.getElementById("canvas_H"),{ 
-        type: 'line',
-  data : {labels:["12", "6am", "12", "6pm", "12", "6am", "12", "6pm", "12"],
- datasets: [{label: "Outside",  borderColor: "#3e95cd", fill: false,data: [0,0,0,8,0,10,0,0] }]},
-        options: {title: { display: true, text: 'Temperature'},
-  animation: {duration: 0, hover: { animationDuration: 0,}, responsiveAnimationDuration: 0,}}});
-        
+        var chart0 = new Chart(document.getElementById("canvas_b"), {
+          type: 'line',
+          data: {
+            labels: ["12", "6am", "12", "6pm", "12", "6am", "12", "6pm", "12"],
+            datasets: [{
+              label: "Outside",
+              borderColor: "#3e95cd",
+              fill: false,
+              data: [0, 0, 0, 8, 0, 10, 0, 0]
+            }]
+          },
+          options: {
+            title: {
+              display: true,
+              text: 'Temperature'
+            },
+            animation: {
+              duration: 0,
+              hover: {
+                animationDuration: 0,
+              },
+              responsiveAnimationDuration: 0,
+            }
+          }
+        });
+
+        chart0.update(); 
+        chart0 = new Chart(document.getElementById("canvas_a"), {
+          type: 'line',
+          data: {
+            labels: ["12", "6am", "12", "6pm", "12", "6am", "12", "6pm", "12"],
+            datasets: [{
+              label: "Outside",
+              borderColor: "#3e95cd",
+              fill: false,
+              data: [0, 0, 0, 8, 0, 10, 0, 0]
+            }]
+          },
+          options: {
+            title: {
+              display: true,
+              text: 'Temperature'
+            },
+            animation: {
+              duration: 0,
+              hover: {
+                animationDuration: 0,
+              },
+              responsiveAnimationDuration: 0,
+            }
+          }
+        });
+
         chart0.update();
       }
 
@@ -666,18 +706,29 @@ body {
   </div>
   <div class="gwd-div-2qgl" id="Data">
     <div class="about">
-      <div class="cent_c">
+      <div class="cent_c" id="cent_c">
         <canvas id="canvas" height="800" width="1000"></canvas>
-      </div>
-      <div id="canvas_div" height="850" width="1500">
+      </div>        
+      <div id="canvas_area_1" height="900" width="1500">    
         <select id="duration" height="50" width="100" class="gwd-select-1y2s">
           <option value="Hour">Hour</option>
           <option value="Day">Day</option>
           <option value="Month">Month</option>
           <option value="Year">Year</option>
         </select>
-        <canvas id="canvas_H" top="50" height="800" width="1500"></canvas>
+        <div id="canvas_area" height="850" width="500" top="50" left="0">
+        <canvas id="canvas_a" height="100" width="500"></canvas>
+        <canvas id="canvas_b" height="100" width="500"></canvas>
+        <canvas id="canvas_c" height="100" width="500"></canvas>
+        <canvas id="canvas_d" height="100" width="500"></canvas>
+        <canvas id="canvas_e" height="100" width="500"></canvas>
+        <canvas id="canvas_f" height="100" width="500"></canvas>
       </div>
+       <div id="canvas_area_2" top="0" left="500" height="850" width="1000">
+        <canvas id="canvas_g" height="850" width="1000" background="black"></canvas>
+      </div>
+  </div>
+  </div>
       <div class="about" id="about">
         <div class="cent">
           <h3>Weather Station Operation</h3>
@@ -702,7 +753,6 @@ body {
           <p>From above calculate Wind Speed and Bearing using Trig</p>
         </div>
       </div>
-    </div>
   </div>
   <label class="gwd-label-p0hn"></label>
 
